--- a/projects/RedditReader/src/app/listing/post/post.component.html
+++ b/projects/RedditReader/src/app/listing/post/post.component.html
@@ -34,7 +34,7 @@
       <mat-icon *ngIf="!isSharing" (click)="share()">share</mat-icon>
       <mat-spinner diameter="35" *ngIf="isSharing"></mat-spinner>
     </button>
-    <button mat-icon-button aria-label="Commet Count" disableRipple="true">
+    <button mat-icon-button aria-label="Commet Count" disableRipple="true" [routerLink]="['/r', vm.subreddit, vm.id]">
       <mat-icon [matBadge]="vm.numComments" matBadgeColor="accent">comment</mat-icon>
     </button>
   </mat-card-actions>
