--- a/projects/RedditReader/src/app/app-root/app-root.component.html
+++ b/projects/RedditReader/src/app/app-root/app-root.component.html
@@ -1,30 +1,36 @@
-<section fxLayout="column" style="min-height: 100vh;">
-  <mat-toolbar color="primary">
-    <span fxFlex="grow">
-      <a style="text-decoration: unset; color: unset;" [routerLink]="['/']">Reddit Reader</a>
-    </span>
+<section fxLayout="row">
+  <section fxFlex="30%" fxHide.lt-lg="true"></section>
 
-    <button mat-icon-button [matMenuTriggerFor]="menu">
-      <mat-icon>more_vert</mat-icon>
-    </button>
-    <mat-menu #menu="matMenu">
-      <button mat-menu-item [routerLink]="['/']">
-        <mat-icon>home</mat-icon>
-        <span>Home</span>
+  <section fxFlex="grow" fxLayout="column" style="min-height: 100vh;">
+    <mat-toolbar color="primary">
+      <span fxFlex="grow">
+        <a style="text-decoration: unset; color: unset;" [routerLink]="['/']">Reddit Reader</a>
+      </span>
+
+      <button mat-icon-button [matMenuTriggerFor]="menu">
+        <mat-icon>more_vert</mat-icon>
       </button>
-      <!-- <button mat-menu-item routerLink="setup">
+      <mat-menu #menu="matMenu">
+        <button mat-menu-item [routerLink]="['/']">
+          <mat-icon>home</mat-icon>
+          <span>Home</span>
+        </button>
+        <!-- <button mat-menu-item routerLink="setup">
         <mat-icon>settings</mat-icon>
         <span>Setup</span>
       </button> -->
-      <div mat-menu-item style="line-height: 1em;">
-        {{buildDate}}
-        <br>
-        {{buildTime}}
-      </div>
-    </mat-menu>
-  </mat-toolbar>
+        <div mat-menu-item style="line-height: 1em;">
+          {{buildDate}}
+          <br>
+          {{buildTime}}
+        </div>
+      </mat-menu>
+    </mat-toolbar>
 
-  <section fxLayout="column" fxFlex="grow">
-    <router-outlet></router-outlet>
+    <section fxLayout="column" fxFlex="grow">
+      <router-outlet></router-outlet>
+    </section>
   </section>
+
+  <section fxFlex="30%" fxHide.lt-lg="true"></section>
 </section>
