--- a/projects/RedditReader/src/app/listing/post/post.component.html
+++ b/projects/RedditReader/src/app/listing/post/post.component.html
@@ -11,7 +11,8 @@
     <img #imgPost mat-card-image [src]="vm.thumbnail" loading="lazy" sizes="100vw" [srcset]="vm.srcset">
   </a>
 
-  <video #vdoPost *ngIf="vm.hasVideo" mat-card-image controls="" muted="" [poster]="vm.thumbnail" preload="auto">
+  <video #vdoPost *ngIf="vm.hasVideo" mat-card-image controls="" muted="" [poster]="vm.thumbnail" preload="auto"
+    (loadedmetadata)="vdoPost.muted=true">
     <source *ngFor="let videoSrc of vm.videoSrcs" [src]="videoSrc.url" [type]="videoSrc.type">
   </video>
 
